.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Assignment_Rate__e/Custom_Assignment_Rate__e.object-meta.xml
<CustomObject>
    <description>Platform Event used to create custom Assignment Rates outside of 2cloudnine product rates creation functionality.
Currently used to create Allowance based Assignment Rates to drastically minimise MPR record creation and management for allowance based Assignment Rates.</description>
    <label>Custom Assignment Rate</label>
    <pluralLabel>Custom Assignment Rates</pluralLabel>
</CustomObject>