.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Assignment_Rate__e/fields/Assignment_ID__c.field-meta.xml
<CustomField>
    <fullName>Assignment_ID__c</fullName>
    <label>Assignment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>