.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Assignment_Rate__e/fields/Custom_Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rule_ID__c</fullName>
    <label>Custom Rule ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>