.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Assignment_Rate__e/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>