.vscode/allianceuat_compare/force-app/main/default/objects/Custom_Assignment_Rate__e/fields/Timesheet_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Activity_ID__c</fullName>
    <label>Timesheet Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>